src/parser.output
Terminals unused in grammar

   ETOK
   '&'
   '|'
   '"'


State 66 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: declblock '{' Declaration_list '}' codeblock '{' Statement_list '}'

    2 Declaration_list: Data_declaration
    3                 | Declaration_list Data_declaration

    4 Data_declaration: INT Variables ';'
    5                 | STRING Variables ';'

    6 Variables: Variable
    7          | Variables ',' Variable

    8 Variable: IDENTIFIER
    9         | IDENTIFIER '[' NUMBER ']'

   10 Label: IDENTIFIER ':' Forms

   11 Statement_list: Statement_list Forms
   12               | Forms

   13 Forms: While
   14      | For
   15      | Assign
   16      | If
   17      | Goto
   18      | Label
   19      | COUT Printparts ';'

   20 Printparts: Printparts ',' Printpart
   21           | Printpart

   22 Printpart: Vars
   23          | SENTENCE
   24          | NUMBER

   25 Vars: IDENTIFIER
   26     | IDENTIFIER '[' Expr ']'

   27 Assign: Vars '=' Expr ';'
   28       | Vars ADDEQ Expr ';'
   29       | Vars SUBEQ Expr ';'
   30       | Vars '*' '=' Expr ';'
   31       | Vars '/' '=' Expr ';'

   32 Expr: Expr '+' Expr
   33     | Expr '-' Expr
   34     | Expr '*' Expr
   35     | Expr '/' Expr
   36     | Expr RS Expr
   37     | Expr '%' Expr
   38     | Expr LS Expr
   39     | Expr '^' Expr
   40     | Vars
   41     | NUMBER
   42     | '-' Expr
   43     | '!' Expr
   44     | '(' Expr ')'

   45 For: FOR IDENTIFIER '=' Expr ',' Expr '{' Statement_list '}'
   46    | FOR IDENTIFIER '=' Expr ',' Expr ',' Expr '{' Statement_list '}'

   47 Condition: Condition AA Condition
   48          | Condition OO Condition
   49          | Bool_s
   50          | '(' Condition ')'

   51 Bool_s: Bool_s '<' Bool_s
   52       | Bool_s '>' Bool_s
   53       | Bool_s GE Bool_s
   54       | Bool_s LE Bool_s
   55       | Bool_s EE Bool_s
   56       | Bool_s NE Bool_s
   57       | Expr

   58 While: WHILE Condition '{' Statement_list '}'

   59 If: IF Condition '{' Statement_list '}'
   60   | IF Condition '{' Statement_list '}' ELSE '{' Statement_list '}'

   61 Goto: GOTO IDENTIFIER IF Condition ';'
   62     | GOTO IDENTIFIER ';'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 43
'"' (34)
'%' (37) 37
'&' (38)
'(' (40) 44 50
')' (41) 44 50
'*' (42) 30 34
'+' (43) 32
',' (44) 7 20 45 46
'-' (45) 33 42
'/' (47) 31 35
':' (58) 10
';' (59) 4 5 19 27 28 29 30 31 61 62
'<' (60) 51
'=' (61) 27 30 31 45 46
'>' (62) 52
'[' (91) 9 26
']' (93) 9 26
'^' (94) 39
'{' (123) 1 45 46 58 59 60
'|' (124)
'}' (125) 1 45 46 58 59 60
error (256)
STRING (258) 5
NUMBER (259) 9 24 41
FOR (260) 45 46
WHILE (261) 58
IF (262) 59 60 61
ELSE (263) 60
GOTO (264) 61 62
declblock (265) 1
codeblock (266) 1
IDENTIFIER (267) 8 9 10 25 26 45 46 61 62
ETOK (268)
SENTENCE (269) 23
INT (270) 4
COUT (271) 19
OO (272) 48
AA (273) 47
ADDEQ (274) 28
SUBEQ (275) 29
NE (276) 56
EE (277) 55
LE (278) 54
GE (279) 53
LS (280) 38
RS (281) 36


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
Declaration_list (51)
    on left: 2 3, on right: 1 3
Data_declaration (52)
    on left: 4 5, on right: 2 3
Variables (53)
    on left: 6 7, on right: 4 5 7
Variable (54)
    on left: 8 9, on right: 6 7
Label (55)
    on left: 10, on right: 18
Statement_list (56)
    on left: 11 12, on right: 1 11 45 46 58 59 60
Forms (57)
    on left: 13 14 15 16 17 18 19, on right: 10 11 12
Printparts (58)
    on left: 20 21, on right: 19 20
Printpart (59)
    on left: 22 23 24, on right: 20 21
Vars (60)
    on left: 25 26, on right: 22 27 28 29 30 31 40
Assign (61)
    on left: 27 28 29 30 31, on right: 15
Expr (62)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44, on right: 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 42 43 44 45 46 57
For (63)
    on left: 45 46, on right: 14
Condition (64)
    on left: 47 48 49 50, on right: 47 48 50 58 59 60 61
Bool_s (65)
    on left: 51 52 53 54 55 56 57, on right: 49 51 52 53 54 55 56
While (66)
    on left: 58, on right: 13
If (67)
    on left: 59 60, on right: 16
Goto (68)
    on left: 61 62, on right: 17


State 0

    0 $accept: . Program $end

    declblock  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: declblock . '{' Declaration_list '}' codeblock '{' Statement_list '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: declblock '{' . Declaration_list '}' codeblock '{' Statement_list '}'

    STRING  shift, and go to state 5
    INT     shift, and go to state 6

    Declaration_list  go to state 7
    Data_declaration  go to state 8


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    5 Data_declaration: STRING . Variables ';'

    IDENTIFIER  shift, and go to state 9

    Variables  go to state 10
    Variable   go to state 11


State 6

    4 Data_declaration: INT . Variables ';'

    IDENTIFIER  shift, and go to state 9

    Variables  go to state 12
    Variable   go to state 11


State 7

    1 Program: declblock '{' Declaration_list . '}' codeblock '{' Statement_list '}'
    3 Declaration_list: Declaration_list . Data_declaration

    STRING  shift, and go to state 5
    INT     shift, and go to state 6
    '}'     shift, and go to state 13

    Data_declaration  go to state 14


State 8

    2 Declaration_list: Data_declaration .

    $default  reduce using rule 2 (Declaration_list)


State 9

    8 Variable: IDENTIFIER .
    9         | IDENTIFIER . '[' NUMBER ']'

    '['  shift, and go to state 15

    $default  reduce using rule 8 (Variable)


State 10

    5 Data_declaration: STRING Variables . ';'
    7 Variables: Variables . ',' Variable

    ','  shift, and go to state 16
    ';'  shift, and go to state 17


State 11

    6 Variables: Variable .

    $default  reduce using rule 6 (Variables)


State 12

    4 Data_declaration: INT Variables . ';'
    7 Variables: Variables . ',' Variable

    ','  shift, and go to state 16
    ';'  shift, and go to state 18


State 13

    1 Program: declblock '{' Declaration_list '}' . codeblock '{' Statement_list '}'

    codeblock  shift, and go to state 19


State 14

    3 Declaration_list: Declaration_list Data_declaration .

    $default  reduce using rule 3 (Declaration_list)


State 15

    9 Variable: IDENTIFIER '[' . NUMBER ']'

    NUMBER  shift, and go to state 20


State 16

    7 Variables: Variables ',' . Variable

    IDENTIFIER  shift, and go to state 9

    Variable  go to state 21


State 17

    5 Data_declaration: STRING Variables ';' .

    $default  reduce using rule 5 (Data_declaration)


State 18

    4 Data_declaration: INT Variables ';' .

    $default  reduce using rule 4 (Data_declaration)


State 19

    1 Program: declblock '{' Declaration_list '}' codeblock . '{' Statement_list '}'

    '{'  shift, and go to state 22


State 20

    9 Variable: IDENTIFIER '[' NUMBER . ']'

    ']'  shift, and go to state 23


State 21

    7 Variables: Variables ',' Variable .

    $default  reduce using rule 7 (Variables)


State 22

    1 Program: declblock '{' Declaration_list '}' codeblock '{' . Statement_list '}'

    FOR         shift, and go to state 24
    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    GOTO        shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    COUT        shift, and go to state 29

    Label           go to state 30
    Statement_list  go to state 31
    Forms           go to state 32
    Vars            go to state 33
    Assign          go to state 34
    For             go to state 35
    While           go to state 36
    If              go to state 37
    Goto            go to state 38


State 23

    9 Variable: IDENTIFIER '[' NUMBER ']' .

    $default  reduce using rule 9 (Variable)


State 24

   45 For: FOR . IDENTIFIER '=' Expr ',' Expr '{' Statement_list '}'
   46    | FOR . IDENTIFIER '=' Expr ',' Expr ',' Expr '{' Statement_list '}'

    IDENTIFIER  shift, and go to state 39


State 25

   58 While: WHILE . Condition '{' Statement_list '}'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars       go to state 45
    Expr       go to state 46
    Condition  go to state 47
    Bool_s     go to state 48


State 26

   59 If: IF . Condition '{' Statement_list '}'
   60   | IF . Condition '{' Statement_list '}' ELSE '{' Statement_list '}'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars       go to state 45
    Expr       go to state 46
    Condition  go to state 49
    Bool_s     go to state 48


State 27

   61 Goto: GOTO . IDENTIFIER IF Condition ';'
   62     | GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 50


State 28

   10 Label: IDENTIFIER . ':' Forms
   25 Vars: IDENTIFIER .
   26     | IDENTIFIER . '[' Expr ']'

    '['  shift, and go to state 51
    ':'  shift, and go to state 52

    $default  reduce using rule 25 (Vars)


State 29

   19 Forms: COUT . Printparts ';'

    NUMBER      shift, and go to state 53
    IDENTIFIER  shift, and go to state 41
    SENTENCE    shift, and go to state 54

    Printparts  go to state 55
    Printpart   go to state 56
    Vars        go to state 57


State 30

   18 Forms: Label .

    $default  reduce using rule 18 (Forms)


State 31

    1 Program: declblock '{' Declaration_list '}' codeblock '{' Statement_list . '}'
   11 Statement_list: Statement_list . Forms

    FOR         shift, and go to state 24
    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    GOTO        shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    COUT        shift, and go to state 29
    '}'         shift, and go to state 58

    Label   go to state 30
    Forms   go to state 59
    Vars    go to state 33
    Assign  go to state 34
    For     go to state 35
    While   go to state 36
    If      go to state 37
    Goto    go to state 38


State 32

   12 Statement_list: Forms .

    $default  reduce using rule 12 (Statement_list)


State 33

   27 Assign: Vars . '=' Expr ';'
   28       | Vars . ADDEQ Expr ';'
   29       | Vars . SUBEQ Expr ';'
   30       | Vars . '*' '=' Expr ';'
   31       | Vars . '/' '=' Expr ';'

    ADDEQ  shift, and go to state 60
    SUBEQ  shift, and go to state 61
    '*'    shift, and go to state 62
    '/'    shift, and go to state 63
    '='    shift, and go to state 64


State 34

   15 Forms: Assign .

    $default  reduce using rule 15 (Forms)


State 35

   14 Forms: For .

    $default  reduce using rule 14 (Forms)


State 36

   13 Forms: While .

    $default  reduce using rule 13 (Forms)


State 37

   16 Forms: If .

    $default  reduce using rule 16 (Forms)


State 38

   17 Forms: Goto .

    $default  reduce using rule 17 (Forms)


State 39

   45 For: FOR IDENTIFIER . '=' Expr ',' Expr '{' Statement_list '}'
   46    | FOR IDENTIFIER . '=' Expr ',' Expr ',' Expr '{' Statement_list '}'

    '='  shift, and go to state 65


State 40

   41 Expr: NUMBER .

    $default  reduce using rule 41 (Expr)


State 41

   25 Vars: IDENTIFIER .
   26     | IDENTIFIER . '[' Expr ']'

    '['  shift, and go to state 51

    $default  reduce using rule 25 (Vars)


State 42

   44 Expr: '(' . Expr ')'
   50 Condition: '(' . Condition ')'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars       go to state 45
    Expr       go to state 66
    Condition  go to state 67
    Bool_s     go to state 48


State 43

   42 Expr: '-' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 69


State 44

   43 Expr: '!' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 70


State 45

   40 Expr: Vars .

    $default  reduce using rule 40 (Expr)


State 46

   32 Expr: Expr . '+' Expr
   33     | Expr . '-' Expr
   34     | Expr . '*' Expr
   35     | Expr . '/' Expr
   36     | Expr . RS Expr
   37     | Expr . '%' Expr
   38     | Expr . LS Expr
   39     | Expr . '^' Expr
   57 Bool_s: Expr .

    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76
    LS   shift, and go to state 77
    RS   shift, and go to state 78

    $default  reduce using rule 57 (Bool_s)


State 47

   47 Condition: Condition . AA Condition
   48          | Condition . OO Condition
   58 While: WHILE Condition . '{' Statement_list '}'

    '{'  shift, and go to state 79
    OO   shift, and go to state 80
    AA   shift, and go to state 81


State 48

   49 Condition: Bool_s .
   51 Bool_s: Bool_s . '<' Bool_s
   52       | Bool_s . '>' Bool_s
   53       | Bool_s . GE Bool_s
   54       | Bool_s . LE Bool_s
   55       | Bool_s . EE Bool_s
   56       | Bool_s . NE Bool_s

    '<'  shift, and go to state 82
    '>'  shift, and go to state 83
    NE   shift, and go to state 84
    EE   shift, and go to state 85
    LE   shift, and go to state 86
    GE   shift, and go to state 87

    $default  reduce using rule 49 (Condition)


State 49

   47 Condition: Condition . AA Condition
   48          | Condition . OO Condition
   59 If: IF Condition . '{' Statement_list '}'
   60   | IF Condition . '{' Statement_list '}' ELSE '{' Statement_list '}'

    '{'  shift, and go to state 88
    OO   shift, and go to state 80
    AA   shift, and go to state 81


State 50

   61 Goto: GOTO IDENTIFIER . IF Condition ';'
   62     | GOTO IDENTIFIER . ';'

    IF   shift, and go to state 89
    ';'  shift, and go to state 90


State 51

   26 Vars: IDENTIFIER '[' . Expr ']'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 91


State 52

   10 Label: IDENTIFIER ':' . Forms

    FOR         shift, and go to state 24
    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    GOTO        shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    COUT        shift, and go to state 29

    Label   go to state 30
    Forms   go to state 92
    Vars    go to state 33
    Assign  go to state 34
    For     go to state 35
    While   go to state 36
    If      go to state 37
    Goto    go to state 38


State 53

   24 Printpart: NUMBER .

    $default  reduce using rule 24 (Printpart)


State 54

   23 Printpart: SENTENCE .

    $default  reduce using rule 23 (Printpart)


State 55

   19 Forms: COUT Printparts . ';'
   20 Printparts: Printparts . ',' Printpart

    ','  shift, and go to state 93
    ';'  shift, and go to state 94


State 56

   21 Printparts: Printpart .

    $default  reduce using rule 21 (Printparts)


State 57

   22 Printpart: Vars .

    $default  reduce using rule 22 (Printpart)


State 58

    1 Program: declblock '{' Declaration_list '}' codeblock '{' Statement_list '}' .

    $default  reduce using rule 1 (Program)


State 59

   11 Statement_list: Statement_list Forms .

    $default  reduce using rule 11 (Statement_list)


State 60

   28 Assign: Vars ADDEQ . Expr ';'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 95


State 61

   29 Assign: Vars SUBEQ . Expr ';'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 96


State 62

   30 Assign: Vars '*' . '=' Expr ';'

    '='  shift, and go to state 97


State 63

   31 Assign: Vars '/' . '=' Expr ';'

    '='  shift, and go to state 98


State 64

   27 Assign: Vars '=' . Expr ';'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 99


State 65

   45 For: FOR IDENTIFIER '=' . Expr ',' Expr '{' Statement_list '}'
   46    | FOR IDENTIFIER '=' . Expr ',' Expr ',' Expr '{' Statement_list '}'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 100


State 66

   32 Expr: Expr . '+' Expr
   33     | Expr . '-' Expr
   34     | Expr . '*' Expr
   35     | Expr . '/' Expr
   36     | Expr . RS Expr
   37     | Expr . '%' Expr
   38     | Expr . LS Expr
   39     | Expr . '^' Expr
   44     | '(' Expr . ')'
   57 Bool_s: Expr .

    ')'  shift, and go to state 101
    '-'  shift, and go to state 71
    '+'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76
    LS   shift, and go to state 77
    RS   shift, and go to state 78

    ')'       [reduce using rule 57 (Bool_s)]
    $default  reduce using rule 57 (Bool_s)


State 67

   47 Condition: Condition . AA Condition
   48          | Condition . OO Condition
   50          | '(' Condition . ')'

    ')'  shift, and go to state 102
    OO   shift, and go to state 80
    AA   shift, and go to state 81


State 68

   44 Expr: '(' . Expr ')'

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 103


State 69

   32 Expr: Expr . '+' Expr
   33     | Expr . '-' Expr
   34     | Expr . '*' Expr
   35     | Expr . '/' Expr
   36     | Expr . RS Expr
   37     | Expr . '%' Expr
   38     | Expr . LS Expr
   39     | Expr . '^' Expr
   42     | '-' Expr .

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    '%'  shift, and go to state 75
    '^'  shift, and go to state 76
    LS   shift, and go to state 77
    RS   shift, and go to state 78

    $default  reduce using rule 42 (Expr)


State 70

   32 Expr: Expr . '+' Expr
   33     | Expr . '-' Expr
   34     | Expr . '*' Expr
   35     | Expr . '/' Expr
   36     | Expr . RS Expr
   37     | Expr . '%' Expr
   38     | Expr . LS Expr
   39     | Expr . '^' Expr
   43     | '!' Expr .

    LS  shift, and go to state 77
    RS  shift, and go to state 78

    $default  reduce using rule 43 (Expr)


State 71

   33 Expr: Expr '-' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 104


State 72

   32 Expr: Expr '+' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 105


State 73

   34 Expr: Expr '*' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 106


State 74

   35 Expr: Expr '/' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 107


State 75

   37 Expr: Expr '%' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 108


State 76

   39 Expr: Expr '^' . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 109


State 77

   38 Expr: Expr LS . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 110


State 78

   36 Expr: Expr RS . Expr

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars  go to state 45
    Expr  go to state 111


State 79

   58 While: WHILE Condition '{' . Statement_list '}'

    FOR         shift, and go to state 24
    WHILE       shift, and go to state 25
    IF          shift, and go to state 26
    GOTO        shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    COUT        shift, and go to state 29

    Label           go to state 30
    Statement_list  go to state 112
    Forms           go to state 32
    Vars            go to state 33
    Assign          go to state 34
    For             go to state 35
    While           go to state 36
    If              go to state 37
    Goto            go to state 38


State 80

   48 Condition: Condition OO . Condition

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars       go to state 45
    Expr       go to state 46
    Condition  go to state 113
    Bool_s     go to state 48


State 81

   47 Condition: Condition AA . Condition

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 42
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars       go to state 45
    Expr       go to state 46
    Condition  go to state 114
    Bool_s     go to state 48


State 82

   51 Bool_s: Bool_s '<' . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 115


State 83

   52 Bool_s: Bool_s '>' . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 116


State 84

   56 Bool_s: Bool_s NE . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 117


State 85

   55 Bool_s: Bool_s EE . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 118


State 86

   54 Bool_s: Bool_s LE . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 119


State 87

   53 Bool_s: Bool_s GE . Bool_s

    NUMBER      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    '('         shift, and go to state 68
    '-'         shift, and go to state 43
    '!'         shift, and go to state 44

    Vars    go to state 45
    Expr    go to state 46
    Bool_s  go to state 120


State 88

   59 If: IF Condition '{' . Statement_list '}'
   60   | IF Condition '{' . Statement_list '}' ELSE '{' Statement_list '}'
